--- a/templates/a.html
+++ b/templates/a.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <img src="img4.jpg" alt="Your Image">
+    <img src="{{ url_for('static', filename='img4.jpg') }}" alt="Example Image">
 </body>
 </html>
 
