--- a/templates/a.html
+++ b/templates/a.html
@@ -23,7 +23,6 @@
     </style>
 </head>
 <body>
-    <img src="{{ url_for('static', filename='{{ name }}.jpg') }}" alt="Example Image">
-</body>
+    <img src="{{ name }}" alt="Your Image"></body>
 </html>
 
