--- a/templates/a.html
+++ b/templates/a.html
@@ -23,6 +23,6 @@
     </style>
 </head>
 <body>
-    <img src="{{ name }}" alt="Your Image"></body>
+    <img src="https://i.ibb.co/{{ name }}/img4.jpg" alt="Your Image"></body>
 </html>
 
